[1754] Fix issues after feedback
* Lighter shade of grey for the View More and View Less links
* Use up and down chevron as in the standards site
* Make sure that this feature is invisible to viewers without JS

--- a/ckanext/dgu/theme/src/css/dgu-ckan.less
+++ b/ckanext/dgu/theme/src/css/dgu-ckan.less
@@ -1179,7 +1179,7 @@ body.controller-package {
     }
     .hideyear,
     .showyear {
-      background: #A2A2A2;
+      background: #E0E0E0;
       border-radius: 3px;
       padding-left: 5px;
       padding-right: 5px;
